RG-1184 fix dialog-ng footer spacing
Former-commit-id: 45e1b14adbb4ca1cf7fa43533e22531576072dd5

--- a/components/dialog-ng/dialog-ng.css
+++ b/components/dialog-ng/dialog-ng.css
@@ -47,7 +47,7 @@
 
 .footer {
   height: auto;
-  padding: calc(unit * 2) calc(unit * 4);
+  padding-top: calc(unit * 2);
 
   font-size: 0;
   text-align: left;
